Fix : Clipping of images in carousel

--- a/src/Styles/globals.css
+++ b/src/Styles/globals.css
@@ -223,6 +223,10 @@ a{
   z-index: 99999999;
 }
 
+.swiper{
+  overflow: visible !important;
+}
+
 .swiper-wrapper{
   overflow: visible !important;
 }
